<resources>
    <string name="app_name">Task Manager | PITON AR-GE</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Task Title</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="title">Title</string>
    <string name="description1">Description</string>
    <string name="save">SAVE</string>
    <string name="sheet_title">YOU CAN ADD TASK THIS</string>
    <string name="remove">REMOVE</string>
    <string name="delete_all_task">Delete All Task</string>
    <string name="exit">Exit</string>
</resources>