<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutBottomSheetContainer"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:layout_marginTop="10sp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/titleSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/descSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_weight="1"
        android:ems="10"
        android:minLines="6"
        android:inputType="textMultiLine"
        android:hint="@string/description1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radioGrp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <RadioButton
                android:checked="true"
                android:id="@+id/dailyRadioButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily" />
            <RadioButton
                android:id="@+id/weeklyRadioButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weekly" />
            <RadioButton
                android:id="@+id/monthlyRadioButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monthly" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/save" />
</LinearLayout>